# Modern-CMake-for-Cpp

./: .bashrc  .gitmodules  Dockerfile  Dockerfile.examples  README.md  build.sh
examples/chapter01/01-hello/: .gitignore  CMakeLists.txt  hello.cpp
examples/chapter01/02-presets/: CMakePresets.json
examples/chapter01/03-script/: script.cmake
examples/chapter01/04-module/: CMakeLists.txt
examples/chapter02/01-arguments/: bracket.cmake  quoted.cmake  unquoted.cmake
examples/chapter02/02-variables/: set.cmake
examples/chapter02/03-environment/: CMakeLists.txt  build.sh
examples/chapter02/04-scope/: CMakeLists.txt
examples/chapter02/06-conditional/: conditional.cmake  conditional_compare.cmake  conditional_gotcha.cmake
examples/chapter02/07-loops/: foreach.cmake  zip.cmake
examples/chapter02/08-definitions/: function.cmake  macro.cmake
examples/chapter02/09-procedural/: CMakeLists.txt
examples/chapter02/10-useful/: include.cmake  include_guard.cmake  message_context.cmake  message_error.cmake
examples/chapter03/01-partition/: CMakeLists.txt
examples/chapter03/02-include/: CMakeLists.txt  main.cpp
examples/chapter03/03-add_subdirectory/: CMakeLists.txt
examples/chapter03/04-subprojects/: main.cpp
examples/chapter03/05-structure/: CMakeLists.txt
examples/chapter03/06-toolchain/: CMakeLists.txt
examples/chapter03/07-features/: CMakeLists.txt  main.cpp
examples/chapter03/08-test_run/: CMakeLists.txt  main.cpp
examples/chapter03/09-in-source/: CMakeLists.txt
examples/chapter04/01-targets/: CMakeLists.txt  calculations.cpp  calculations.h  drawing.cpp  drawing.h  gui_app.cpp  terminal_app.cpp
examples/chapter04/02-propagated/: CMakeLists.txt
examples/chapter04/03-command/: CMakeLists.txt  main.cpp  template.xyz
examples/chapter04/04-command/: CMakeLists.txt  main.cpp
examples/chapter04/05-genex/: CMakeLists.txt
examples/chapter05/01-sources/: CMakeLists.txt  gui_linux.cpp  gui_windows.cpp  main.cpp
examples/chapter05/02-definitions/: CMakeLists.txt  definitions.cpp
examples/chapter05/03-git/: CMakeLists.txt  print_commit.cpp
examples/chapter05/04-configure/: CMakeLists.txt  configure.cpp  configure.h.in
examples/chapter05/05-optimize/: CMakeLists.txt  inline.cpp  unroll.cpp
examples/chapter05/06-precompile/: CMakeLists.txt  factorial.h  hello.cpp  main.cpp
examples/chapter05/07-debug/: CMakeLists.txt
examples/chapter06/01-libraries/: CMakeLists.txt  function_a.cpp  function_b.cpp
examples/chapter06/02-odr-fail/: CMakeLists.txt  one.cpp  shared.h  two.cpp
examples/chapter06/03-odr-success/: one.cpp  shared.h
examples/chapter06/04-odr-success/: shared.h
examples/chapter06/05-dynamic/: CMakeLists.txt  a.cpp  b.cpp  main.cpp
examples/chapter06/06-unresolved/: CMakeLists.txt  main.cpp  nested.cpp  outer.cpp
examples/chapter06/07-testing/: CMakeLists.txt  main.cpp  program.cpp  test.cpp
examples/chapter07/01-find-package-variables/: CMakeLists.txt  main.cpp  message.proto
examples/chapter07/02-find-package-targets/: CMakeLists.txt  README  message.proto
examples/chapter07/03-find-pkg-config/: CMakeLists.txt  README
examples/chapter07/04-find-package-custom/: CMakeLists.txt  README  main.cpp
examples/chapter07/05-git-submodule-manual/: CMakeLists.txt
examples/chapter07/06-git-submodule-auto/: CMakeLists.txt
examples/chapter07/07-git-clone/: CMakeLists.txt  config.yaml  main.cpp
examples/chapter07/08-external-project-git/: CMakeLists.txt  main.cpp
examples/chapter07/09-fetch-content/: CMakeLists.txt
examples/chapter08/01-no-framework/: CMakeLists.txt
examples/chapter08/02-structured/: CMakeLists.txt
examples/chapter08/02-structured/test/: CMakeLists.txt  run_test.cpp  unit_tests.cpp
examples/chapter08/03-catch2/: CMakeLists.txt
examples/chapter08/03-catch2/test/: CMakeLists.txt  calc_test.cpp  run_test.cpp
examples/chapter08/04-gtest/: CMakeLists.txt
examples/chapter08/05-gmock/: CMakeLists.txt
examples/chapter08/05-gmock/test/: CMakeLists.txt  run_test.cpp
examples/chapter08/06-coverage/: CMakeLists.txt
examples/chapter08/06-coverage/src/: CMakeLists.txt  calc.cpp  calc.h
examples/chapter09/01-formatting/: .clang-format  CMakeLists.txt
examples/chapter09/02-clang-tidy/: CMakeLists.txt
examples/chapter09/03-valgrind/: CMakeLists.txt
examples/chapter09/04-memcheck/: CMakeLists.txt
examples/chapter10/01-doxygen/: CMakeLists.txt
examples/chapter10/02-doxygen-nice/: CMakeLists.txt
examples/chapter11/01-export/: CMakeLists.txt
examples/chapter11/01-export/src/: CMakeLists.txt
examples/chapter11/02-install-targets/: CMakeLists.txt
examples/chapter11/03-install-files/: CMakeLists.txt
examples/chapter11/04-install-directories/: CMakeLists.txt
examples/chapter11/04-install-directories/data/: data.csv
examples/chapter11/04-install-directories/etc/calc/: nested.conf
examples/chapter11/04-install-directories/src/include/calc/ignored/: empty.file
examples/chapter11/05-install-code/: CMakeLists.txt
examples/chapter11/05-install-code/src/: CMakeLists.txt
examples/chapter11/06-install-export/: CMakeLists.txt
examples/chapter11/07-config-file/: CMakeLists.txt
examples/chapter11/08-find_package/: CMakeLists.txt
examples/chapter11/09-advanced-config/: CMakeLists.txt  CalcConfig.cmake.in
examples/chapter11/09-advanced-config/src/: calc.cpp
examples/chapter11/10-version-file/: CMakeLists.txt
examples/chapter11/10-version-file/src/: CMakeLists.txt
examples/chapter11/11-components/: CMakeLists.txt  CalcConfig.cmake
examples/chapter11/11-components/src/include/calc/: calc.h
examples/chapter11/12-cpack/: CMakeLists.txt
examples/chapter12/: .clang-format
examples/chapter12/01-full-project/src/calc/: CMakeLists.txt  calc.cpp
examples/chapter12/01-full-project/src/calc/include/calc/: calc.h
examples/chapter12/01-full-project/src/calc_console/: CMakeLists.txt  bootstrap.cpp  tui.cpp
examples/chapter12/01-full-project/src/calc_console/include/: tui.h
examples/chapter12/02-find_package/: CMakeLists.txt  main.cpp
root/: .bashrc
(+84 files in other folders)
